--- a/less/style.less
+++ b/less/style.less
@@ -1,4 +1,6 @@
 @import 'modules/_config';
+@import 'modules/_grid';
+@import 'modules/_utils';
 @import 'theme';
 @import '_portfolio';
 @import '_blog';
