--- a/less/theme.less
+++ b/less/theme.less
@@ -126,27 +126,27 @@ body {
 			&:extend(.transition);
 		}
 	}
-	&:before {
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		z-index: 999999;
-		background: @light;
-	}
-	&:after {
-		left: 50%;
-		top: 50%;	
-		display: block;
-		z-index: 9999999;
-		width: 60px;
-		height: 60px;
-		margin-top: -30px;
-		margin-left: -30px;
-		background: @dark;
-	    -webkit-animation: sk-rotateplane 1.2s infinite ease-in-out;
-	            animation: sk-rotateplane 1.2s infinite ease-in-out;
-	}
+	// &:before {
+	// 	top: 0;
+	// 	left: 0;
+	// 	width: 100%;
+	// 	height: 100%;
+	// 	z-index: 999999;
+	// 	background: @light;
+	// }
+	// &:after {
+	// 	left: 50%;
+	// 	top: 50%;	
+	// 	display: block;
+	// 	z-index: 9999999;
+	// 	width: 60px;
+	// 	height: 60px;
+	// 	margin-top: -30px;
+	// 	margin-left: -30px;
+	// 	background: @dark;
+	//     -webkit-animation: sk-rotateplane 1.2s infinite ease-in-out;
+	//             animation: sk-rotateplane 1.2s infinite ease-in-out;
+	// }
 }
 a {
 	text-decoration: none;
