--- a/less/style.less
+++ b/less/style.less
@@ -1,6 +1,4 @@
 @import 'modules/_config';
-@import 'modules/_grid';
-@import 'modules/_utils';
 @import 'theme';
 @import '_portfolio';
 @import '_blog';
@@ -13,6 +11,7 @@
 @import '_header_v1';
 @import '_header_sticky';
 @import '_header_menu_extras';
-@import '_off_canvas';
+@import '_off_canvas.less';
 @import '_color';
 @import '_owl_carousel';
+@import '_define';
