--- a/scss/component/_header.scss
+++ b/scss/component/_header.scss
@@ -1,3 +1,263 @@
 .site-header {
     
+    .header-content {
+        .header-brand {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-between;
+            position: relative;
+            z-index: 3;
+            margin-top: 23px;
+            margin-bottom: 27px;
+            .header-info-text {
+                margin: 0 40px;
+                font-size: 14px;
+                a {
+                    color: #61708b;
+                }
+            }
+            .extras {
+                flex-grow: 1;
+                display: flex;
+                justify-content: flex-end;
+                height: auto;
+                .menu-extras {
+                    display: flex;
+                    margin: 0;
+                    padding: 0;
+                    list-style: none;
+                    align-items: center;
+                    justify-content: space-between;
+                    .search-box {
+                        width: 370px;
+                        position: relative;
+                        margin: 0 0 0 25px;
+                        > a {
+                            position: absolute;
+                            left: 0;
+                            bottom: 0;
+                            right: 0;
+                            top: 0;
+                            z-index: 2;
+                            text-indent: -9999px;
+                            padding: 0;
+                            margin: 0;
+                            color: #61708b;
+                            i {
+                                vertical-align: middle;
+                            }
+                        }
+                        .widget_search {
+                            position: relative;
+                            font-size: 15px;
+                            margin-bottom: 0;
+                            form {
+                                position: relative;
+                                label {
+                                    width: 100%;
+                                    span {
+                                        left: 12px;
+                                        opacity: 0;
+                                        position: absolute;
+                                        z-index: 1;
+                                        text-indent: -9999px ;
+                                        width: 20px;
+                                        right: 15px;
+                                        top: 50%;
+                                        transform: translateY(-50%);
+                                        overflow: visible;
+                                        clip: inherit;
+                                        clip-path: inherit;
+                                        word-wrap: normal!important;
+                                        border: 0;
+                                        height: 1px;
+                                        margin: -1px;
+                                        padding: 0;
+                                        &::after {
+                                            content: "\ea02";
+                                            font-family: "Nucleo";
+                                            font-size: 16px;
+                                            text-indent: 0;
+                                            position: absolute;
+                                            top: 50%;
+                                            left: 50%;
+                                            transform: translate(-50%,-50%);
+                                            opacity: .5;
+                                        }
+                                    }
+                                    input {
+                                        padding-top: 0;
+                                        padding-bottom: 0;
+                                        height: 40px;
+                                        width: 100%;
+                                        position: relative;
+                                        max-width: 100%;
+                                        line-height: inherit;
+                                        box-sizing: border-box;
+                                        box-shadow: 0 2px 4px rgba(107,124,147,.06);
+                                        background: #ffffff;
+                                        font-family: Jost;
+                                        font-style: normal;
+                                        color: #6b7c93;
+                                        font-size: 15px;
+                                        line-height: 24px;
+                                        padding-top: 15px;
+                                        padding-right: 20px;
+                                        padding-bottom: 15px;
+                                        padding-left: 20px;
+                                        border: 1px solid rgba(107, 124, 147, 0.15);
+                                        border-radius: 3px;
+                                    }
+                                }
+                                .search-submit {
+                                    text-indent: 0;
+                                    width: auto;
+                                    z-index: 3;
+                                    right: 5px;
+                                    color: #fff;
+                                    padding: 0 15px;
+                                    box-shadow: 0 5px 15px rgba(107,124,147,.15);
+                                    opacity: 0;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+            .off-canvas-toggle {
+                flex-shrink: 0;
+                color: #fff;
+                margin-left: 30px;
+                display: none;
+                background-color: #1252f5;
+                width: 54px;
+                height: 54px;
+                text-align: center;
+                border-radius: 27px;
+                position: relative;
+                float: right;
+                line-height: 40px;
+            }
+        }
+        nav.navigator {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            .menu-primary {
+                display: flex;
+                flex-grow: 1;
+                justify-content: space-between;
+                li {
+                    list-style: none;
+                    position: relative;
+                    a {
+                        color: #61708b;
+                        font-size: 16px;
+                        line-height: 24px;
+                        display: block;
+                        position: relative;
+                        z-index: 3;
+                        &::before {
+                            content: "";
+                            position: absolute;
+                            height: 1px;
+                            width: 0;
+                            right: 0;
+                            bottom: -15px;
+                            transition: 0.5s cubic-bezier(.25,.8,.25,1) 0s;
+                            background-color: #54c8ef;
+                        }
+                    }
+                    .sub-menu {
+                        min-width: 265px;
+                        position: absolute;
+                        left: -20px;
+                        top: 100%;
+                        z-index: 2;
+                        padding: 40px 0 25px 0;
+                        visibility: hidden;
+                        opacity: 0;
+                        display: flex;
+                        width: 100%;
+                        justify-content: center;
+                    }
+                    &.menu-item-has-children {
+                        a {
+                            &::after {
+                                content: "\ea03";
+                                font-size: 12px;
+                                font-family: "Nucleo";
+                                margin-left: 10px;
+                                line-height: 1;
+                                position: relative;
+                                top: 1px;
+                                display: inline-block;
+                                transition: 0.5s cubic-bezier(.25,.8,.25,1) 0s;
+                                color: #61708b;
+                            }
+                        }
+                    }
+                    &:hover {
+                        .sub-menu {
+                            opacity: 1;
+                            visibility: visible;
+                        }
+                    }
+                }
+            }
+            .nav-info {
+                position: relative;
+                z-index: 2;
+                margin-left: 55px;
+                border-left: 1px solid rgba(107,124,147,.3);
+                padding-left: 50px;
+                a {
+                    text-transform: uppercase;
+                    font-weight: 600;
+                    font-size: 13px;
+                    letter-spacing: 2px;
+                    position: relative;
+                    color: #1252f5;
+                    &::before {
+                        content: "";
+                        position: absolute;
+                        height: 1px;
+                        width: 0;
+                        right: 0;
+                        bottom: -15px;
+                        transition: 0.5s cubic-bezier(.25,.8,.25,1) 0s;
+                        background-color: #1252f5;
+                    }
+                    &:hover {
+                        &::before {
+                            width: 100%;
+                            left: 0;
+                            right: auto;
+                        }
+                    }
+                }
+            }
+            .social-icons {
+                position: relative;
+                z-index: 2;
+                margin-left: 60px;
+                a {
+                    color: #1252f5;
+                    display: inline-block;
+                    margin: 0 15px;
+                    &:first-child {
+                        margin-left: 0;
+                    }
+                    i {
+                        font-size: 18px;
+                        color: #1252f5;
+                    }
+                    &:hover {
+                        transform: scale(1.3);
+                    }
+                }
+            }
+        }
+    }
 }
