--- a/css/style.css
+++ b/css/style.css
@@ -744,37 +744,272 @@ a:focus {
   position: relative;
   margin-left: auto;
   margin-right: auto;
-  padding-right: 10px;
-  padding-left: 10px;
-  width: 1130px;
+  width: 1200px;
   max-width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+.tf-container .row {
+  margin-left: -15px !important;
+  margin-right: -15px !important;
+}
+.tf-container .row > * {
+  padding-left: 15px !important;
+  padding-right: 15px !important;
 }
 .tf-container.full {
   width: 100%;
 }
-.tf-container .row {
-  margin-left: -10px !important;
-  margin-right: -10px !important;
+
+.site-header .header-content .header-brand {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+  z-index: 3;
+  margin-top: 23px;
+  margin-bottom: 27px;
 }
-.tf-container .row > * {
-  padding-left: 10px !important;
-  padding-right: 10px !important;
+.site-header .header-content .header-brand .header-info-text {
+  margin: 0 40px;
+  font-size: 14px;
 }
-.tf-container.space30 {
-  padding-right: 15px;
-  padding-left: 15px;
-  width: 1140px;
+.site-header .header-content .header-brand .header-info-text a {
+  color: #61708b;
 }
-.tf-container.space30 .row {
-  margin-left: -15px !important;
-  margin-right: -15px !important;
+.site-header .header-content .header-brand .extras {
+  flex-grow: 1;
+  display: flex;
+  justify-content: flex-end;
+  height: auto;
 }
-.tf-container.space30 .row > * {
-  padding-left: 15px !important;
-  padding-right: 15px !important;
+.site-header .header-content .header-brand .extras .menu-extras {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  align-items: center;
+  justify-content: space-between;
 }
-.tf-container.w1060 {
-  width: 1080px;
+.site-header .header-content .header-brand .extras .menu-extras .search-box {
+  width: 370px;
+  position: relative;
+  margin: 0 0 0 25px;
+}
+.site-header .header-content .header-brand .extras .menu-extras .search-box > a {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  top: 0;
+  z-index: 2;
+  text-indent: -9999px;
+  padding: 0;
+  margin: 0;
+  color: #61708b;
+}
+.site-header .header-content .header-brand .extras .menu-extras .search-box > a i {
+  vertical-align: middle;
+}
+.site-header .header-content .header-brand .extras .menu-extras .search-box .widget_search {
+  position: relative;
+  font-size: 15px;
+  margin-bottom: 0;
+}
+.site-header .header-content .header-brand .extras .menu-extras .search-box .widget_search form {
+  position: relative;
+}
+.site-header .header-content .header-brand .extras .menu-extras .search-box .widget_search form label {
+  width: 100%;
+}
+.site-header .header-content .header-brand .extras .menu-extras .search-box .widget_search form label span {
+  left: 12px;
+  opacity: 0;
+  position: absolute;
+  z-index: 1;
+  text-indent: -9999px;
+  width: 20px;
+  right: 15px;
+  top: 50%;
+  transform: translateY(-50%);
+  overflow: visible;
+  clip: inherit;
+  clip-path: inherit;
+  word-wrap: normal !important;
+  border: 0;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+}
+.site-header .header-content .header-brand .extras .menu-extras .search-box .widget_search form label span::after {
+  content: "\ea02";
+  font-family: "Nucleo";
+  font-size: 16px;
+  text-indent: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0.5;
+}
+.site-header .header-content .header-brand .extras .menu-extras .search-box .widget_search form label input {
+  padding-top: 0;
+  padding-bottom: 0;
+  height: 40px;
+  width: 100%;
+  position: relative;
+  max-width: 100%;
+  line-height: inherit;
+  box-sizing: border-box;
+  box-shadow: 0 2px 4px rgba(107, 124, 147, 0.06);
+  background: #ffffff;
+  font-family: Jost;
+  font-style: normal;
+  color: #6b7c93;
+  font-size: 15px;
+  line-height: 24px;
+  padding-top: 15px;
+  padding-right: 20px;
+  padding-bottom: 15px;
+  padding-left: 20px;
+  border: 1px solid rgba(107, 124, 147, 0.15);
+  border-radius: 3px;
+}
+.site-header .header-content .header-brand .extras .menu-extras .search-box .widget_search form .search-submit {
+  text-indent: 0;
+  width: auto;
+  z-index: 3;
+  right: 5px;
+  color: #fff;
+  padding: 0 15px;
+  box-shadow: 0 5px 15px rgba(107, 124, 147, 0.15);
+  opacity: 0;
+}
+.site-header .header-content .header-brand .off-canvas-toggle {
+  flex-shrink: 0;
+  color: #fff;
+  margin-left: 30px;
+  display: none;
+  background-color: #1252f5;
+  width: 54px;
+  height: 54px;
+  text-align: center;
+  border-radius: 27px;
+  position: relative;
+  float: right;
+  line-height: 40px;
+}
+.site-header .header-content nav.navigator {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.site-header .header-content nav.navigator .menu-primary {
+  display: flex;
+  flex-grow: 1;
+  justify-content: space-between;
+}
+.site-header .header-content nav.navigator .menu-primary li {
+  list-style: none;
+  position: relative;
+}
+.site-header .header-content nav.navigator .menu-primary li a {
+  color: #61708b;
+  font-size: 16px;
+  line-height: 24px;
+  display: block;
+  position: relative;
+  z-index: 3;
+}
+.site-header .header-content nav.navigator .menu-primary li a::before {
+  content: "";
+  position: absolute;
+  height: 1px;
+  width: 0;
+  right: 0;
+  bottom: -15px;
+  transition: 0.5s cubic-bezier(0.25, 0.8, 0.25, 1) 0s;
+  background-color: #54c8ef;
+}
+.site-header .header-content nav.navigator .menu-primary li .sub-menu {
+  min-width: 265px;
+  position: absolute;
+  left: -20px;
+  top: 100%;
+  z-index: 2;
+  padding: 40px 0 25px 0;
+  visibility: hidden;
+  opacity: 0;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+.site-header .header-content nav.navigator .menu-primary li.menu-item-has-children a::after {
+  content: "\ea03";
+  font-size: 12px;
+  font-family: "Nucleo";
+  margin-left: 10px;
+  line-height: 1;
+  position: relative;
+  top: 1px;
+  display: inline-block;
+  transition: 0.5s cubic-bezier(0.25, 0.8, 0.25, 1) 0s;
+  color: #61708b;
+}
+.site-header .header-content nav.navigator .menu-primary li:hover .sub-menu {
+  opacity: 1;
+  visibility: visible;
+}
+.site-header .header-content nav.navigator .nav-info {
+  position: relative;
+  z-index: 2;
+  margin-left: 55px;
+  border-left: 1px solid rgba(107, 124, 147, 0.3);
+  padding-left: 50px;
+}
+.site-header .header-content nav.navigator .nav-info a {
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 13px;
+  letter-spacing: 2px;
+  position: relative;
+  color: #1252f5;
+}
+.site-header .header-content nav.navigator .nav-info a::before {
+  content: "";
+  position: absolute;
+  height: 1px;
+  width: 0;
+  right: 0;
+  bottom: -15px;
+  transition: 0.5s cubic-bezier(0.25, 0.8, 0.25, 1) 0s;
+  background-color: #1252f5;
+}
+.site-header .header-content nav.navigator .nav-info a:hover::before {
+  width: 100%;
+  left: 0;
+  right: auto;
+}
+.site-header .header-content nav.navigator .social-icons {
+  position: relative;
+  z-index: 2;
+  margin-left: 60px;
+}
+.site-header .header-content nav.navigator .social-icons a {
+  color: #1252f5;
+  display: inline-block;
+  margin: 0 15px;
+}
+.site-header .header-content nav.navigator .social-icons a:first-child {
+  margin-left: 0;
+}
+.site-header .header-content nav.navigator .social-icons a i {
+  font-size: 18px;
+  color: #1252f5;
+}
+.site-header .header-content nav.navigator .social-icons a:hover {
+  transform: scale(1.3);
 }
 
 /*# sourceMappingURL=style.css.map */
