--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -721,3 +721,11 @@ a {
         width: 100%;
     }
 }
+
+
+.wrap {
+    position: relative;
+    margin: 0 auto;
+    width: 1170px;
+    max-width: 90%;
+}
