--- a/scss/component/_index.scss
+++ b/scss/component/_index.scss
@@ -1,16 +1,13 @@
 @import "header";
-@import "button";
 @import "form";
-@import "box-icon";
-@import "slider";
-@import "box-game";
-@import "box-offers";
-@import "sections";
-@import "live-contests";
-@import "table-ratings";
-@import "menu-left";
-@import "social";
-@import "sidebar";
-@import "tabs";
-@import "popup";
+@import "blog";
+@import "color";
+@import "contactform";
+@import "elements";
+@import "off-canvas";
+@import "carousel";
+@import "portfolio";
+@import "header-menu";
+@import "rtl";
+@import "theme";
 @import "responsive";
