--- a/scss/component/_index.scss
+++ b/scss/component/_index.scss
@@ -1,13 +1,15 @@
 @import "header";
-@import "form";
-@import "blog";
-@import "color";
-@import "contactform";
-@import "elements";
-@import "off-canvas";
-@import "carousel";
-@import "portfolio";
 @import "header-menu";
-@import "rtl";
-@import "theme";
-@import "responsive";
+@import "section";
+@import "widget";
+// @import "blog";
+// @import "form";
+// @import "color";
+// @import "contactform";
+// @import "elements";
+// @import "off-canvas";
+// @import "carousel";
+// @import "portfolio";
+// @import "rtl";
+// @import "theme";
+// @import "responsive";
