--- a/scss/component/header-menu.scss
+++ b/scss/component/header-menu.scss
@@ -275,7 +275,7 @@
 				position: relative;
 				&:hover {
 					> .sub-menu, > .children {
-						display: block\9;
+						display: block;
 						visibility: visible;
 		        		// .opacity(1);
 						// .transition( 0.5s cubic-bezier(0.25, 0.8, 0.25, 1) 0s);
