--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -217,8 +217,8 @@ textarea {
     font-family: 'Jost';
     font-style: normal;
     color: #61708b;
-    font-size: 1rem;
-    line-height: 150%;
+    font-size: 16px;
+    line-height: 24px;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     text-rendering         : optimizeLegibility;
@@ -444,7 +444,6 @@ input {
     line-height: normal;
 }
 
-button,
 input,
 select,
 textarea {
@@ -452,6 +451,18 @@ textarea {
     line-height   : inherit;
     margin        : 0;
     vertical-align: baseline;
+    background: #ffffff;
+    font-family: Jost;
+    font-style: normal;
+    color: #6b7c93;
+    font-size: 15px;
+    line-height: 24px;
+    padding-top: 15px;
+    padding-right: 20px;
+    padding-bottom: 15px;
+    padding-left: 20px;
+    border: 1px solid rgba(107, 124, 147, 0.15);
+    border-radius: 3px;
 }
 
 input,
@@ -646,11 +657,32 @@ h6 {
 .text-center {
     text-align: center;
 }
+.has-text-align-center {
+    text-align: center;
+}
 .pb-30 {
     padding-bottom: 30px;
 }
 .pb-20 {
     padding-bottom: 20px;
+}
+.gap25 {
+    gap: 25px !important;
+}
+.mb-30 {
+    margin-bottom: 30px !important;
+}
+.mb-40 {
+    margin-bottom: 40px !important;
+}
+.mb-50 {
+    margin-bottom: 50px !important;
+}
+.mb-60 {
+    margin-bottom: 60px !important;
+}
+.mb-80 {
+    margin-bottom: 80px !important;
 }
 .w-full {
     width: 100% !important;
