--- a/font/style.css
+++ b/font/style.css
@@ -6,7 +6,8 @@
  * -------------------------- */
  @font-face {
     font-family: 'FontAwesome';
-    src: url('../fonts/fontawesome-webfont.eot?#iefix&v=4.7.0') format('embedded-opentype'), url('../fonts/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular') format('svg');
+    src: url('fontawesome-webfont.eot?#iefix&v=4.7.0') format('embedded-opentype'), 
+         url('fontawesome-webfont.svg?v=4.7.0#fontawesomeregular') format('svg');
     font-weight: normal;
     font-style: normal;
   }
@@ -2343,8 +2344,8 @@
   -------------------------------- */
   @font-face {
     font-family: 'Nucleo';
-    src: url('../fonts/Nucleo.eot');
-    src: url('../fonts/Nucleo.eot') format('embedded-opentype'), url('../fonts/Nucleo.woff2') format('woff2'), url('../fonts/Nucleo.woff') format('woff'), url('../fonts/Nucleo.ttf') format('truetype'), url('../fonts/Nucleo.svg') format('svg');
+    src: url('Nucleo.eot');
+    src: url('Nucleo.eot') format('embedded-opentype'), url('Nucleo.woff2') format('woff2'), url('Nucleo.woff') format('woff'), url('Nucleo.ttf') format('truetype'), url('Nucleo.svg') format('svg');
     font-weight: normal;
     font-style: normal;
   }
