--- a/scss/component/_widget.scss
+++ b/scss/component/_widget.scss
@@ -117,6 +117,72 @@ p {
         }
     }
 }
+
+.btns-more-link {
+    color: inherit;
+    font-size: 13px;
+    min-width: 234px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-weight: 500;
+    position: relative;
+    padding-left: 65px;
+    padding-right: 20px;
+    display: inline-block;
+    align-items: center;
+    height: 50px;
+    line-height: 50px;
+    z-index: 2;
+    transition: 0.5s cubic-bezier(.25,.8,.25,1) 0s;
+    &::before,
+    &::after {
+        content: "";
+        position: absolute;
+        width: 18px;
+        height: 2px;
+        left: 16px;
+        top: 50%;
+        z-index: 2;
+        background: #6b7c93;
+        transform: translateY(-50%);
+        border-radius: 3px;
+        transition: 0.5s cubic-bezier(.25,.8,.25,1) 0s;
+    }
+    &::before {
+        transform: translateY(-50%) rotate(90deg);
+    }
+    span {
+        &::before {
+            z-index: -1;
+            content: "";
+            position: absolute;
+            left: 0;
+            top: 50%;
+            transform: translateY(-50%);
+            width: 50px;
+            height: 50px;
+            background: linear-gradient(180deg,#ffffff 0%,#eaeef3 100%);
+            box-shadow: 0 5px 15px 0 rgba(107,124,147,.15),0 2px 4px 0 rgba(107,124,147,.2),inset 0 -2px 0 0 #c2cfde;
+            border-radius: 25px;
+            transition: 0.5s cubic-bezier(.25,.8,.25,1) 0s
+        }
+    }
+    &:hover {
+        padding-left: 50px;
+        color: inherit;
+        &::before {
+            transform: translateY(-50%) rotate(-90deg)
+        }
+        &::after {
+            transform: translateY(-50%) rotate(-180deg)
+        }
+        span {
+            &::before {
+                width: 100%
+            }
+        }
+    }
+}
 // button
 
 // slider
@@ -848,358 +914,64 @@ p {
     }
 }
 
-// .post {
-//     .post-inner {
-//         padding-top: 18px;
-//         margin-bottom: 30px;
-//         position: relative;
-//         border-top: 1px solid rgba(107,124,147,.3);
-//         .post-meta {
-//             display: flex;
-//             justify-content: space-between;
-//             font-size: 14px;
-//             padding: 0 0 10px 0;
-//             .post-categories {
-//                 a {
-//                     float: left;
-//                     font-size: 12px;
-//                     letter-spacing: 1px;
-//                     margin: 0 8px 8px 0;
-//                     position: relative;
-//                     text-transform: uppercase;
-//                     font-weight: 500;
-//                     line-height: 25px;
-//                     color: #fff;
-//                     padding: 1px 15px 0 30px;
-//                     box-shadow: 0 5px 15px rgba(107,124,147,.15);
-//                     border-radius: 3px;
-//                     background-color: #54c8ef;
-//                     &::before {
-//                         content: "\ea07";
-//                         font-family: "Nucleo";
-//                         font-size: 10px;
-//                         letter-spacing: 0;
-//                         font-weight: 400;
-//                         position: absolute;
-//                         top: 49%;
-//                         transform: translateY(-50%);
-//                         left: 12px;
-//                         opacity: .5;
-//                     }
-//                 }
-//             }
-//             .post-date {
-//                 color: #3a416f;
-//                 opacity: .7;
-//                 flex-shrink: 0;
-//             }
-//         }
-//         .post-image {
-//             margin-bottom: 20px;
-//             .featured-image {
-//                 display: block;
-//                 position: relative;
-//             }
-//         }
-//         .post-header {
-//             .post-title {
-//                 font-size: 20px;
-//                 margin: 0 0 15px 0;
-//                 line-height: 1.3;
-//                 word-wrap: break-word;
-//                 overflow-wrap: break-word;
-//                 a {
-//                     background-image: linear-gradient(180deg, transparent 96%, #54c8ef 0);
-//                 }
-//             }
-//         }
-//         .post-author {
-//             display: flex;
-//             align-items: center;
-//             font-size: 13px;
-//             line-height: 1;
-//             margin-bottom: 30px;
-//             color: #3a416f;
-//             text-transform: lowercase;
-//             a {
-//                 color: inherit;
-//             }
-//             .post-read {
-//                 border-left: 1px solid rgba(107,124,147,.5);
-//                 margin-left: 8px;
-//                 padding-left: 8px;
-//             }
-//         }
-//         .post-content {
-//             margin-bottom: 30px;
-//             word-break: break-word;
-//             p {
-//                 font-size: 16px;
-//                 line-height: 24px;
+.widget-tabs {
+    .widget-content-tab {
+        .widget-content-inner {
+            p {
+                font-size: 18px;
+                color: #3a416f;
+                line-height: 30px;
+                text-align: center;
+                padding-left: 10%;
+                padding-right: 10%;
+            }
+        }
+    }
+}
 
-//             }
-//         }
-//     }
-// }
-
-// .blog-readmore {
-//     color: #fff;
-//     font-size: 13px;
-//     text-transform: uppercase;
-//     letter-spacing: 2px;
-//     font-weight: 500;
-//     position: relative;
-//     padding-left: 65px;
-//     padding-right: 20px;
-//     display: inline-block;
-//     align-items: center;
-//     height: 50px;
-//     line-height: 50px;
-//     z-index: 3;
-//     transition: 0.5s cubic-bezier(.25,.8,.25,1) 0s;
-//     &::after {
-//         content: "";
-//         position: absolute;
-//         width: 18px;
-//         height: 2px;
-//         left: 16px;
-//         top: 50%;
-//         z-index: 2;
-//         background: #fff;
-//         transform: translateY(-50%);
-//         border-radius: 3px;
-//         transition: 0.5s cubic-bezier(.25,.8,.25,1) 0s;
-//     }
-//     &::before {
-//         content: "";
-//         position: absolute;
-//         width: 18px;
-//         height: 2px;
-//         left: 16px;
-//         top: 50%;
-//         z-index: 2;
-//         background: #fff;
-//         transform: translateY(-50%);
-//         border-radius: 3px;
-//         transition: 0.5s cubic-bezier(.25,.8,.25,1) 0s;
-//         transform: translateY(-50%) rotate(90deg);
-//     }
-//     span {
-//         transition: 0.5s cubic-bezier(.25,.8,.25,1) 0s;
-//         &::before {
-//             z-index: -1;
-//             content: "";
-//             position: absolute;
-//             left: 0;
-//             top: 50%;
-//             transform: translateY(-50%);
-//             width: 50px;
-//             height: 50px;
-//             box-shadow: 0 2px 4px rgba(107,124,147,.06);
-//             border-radius: 25px;
-//             transition: 0.5s cubic-bezier(.25,.8,.25,1) 0s;
-//             background-color: #54c8ef;
-//         }
-//     }
-//     &:hover {
-//         padding-left: 50px;
-//         &::before {
-//             transform: translateY(-50%) rotate(-90deg);
-//         }
-//         &::after {
-//             transform: translateY(-50%) rotate(-180deg);
-//         }
-//         span {
-//             color: #fff;
-//             &::before {
-//                 width: 100%;
-//             }
-//         }
-//     }
-// }
-
-
-// .content-bottom-widgets {
-//     padding-top: 40px;
-//     background-color: #fff;
-//     background-image: url(./../images/2020/08/bg-bottom-scaled.jpg);
-//     background-position: bottom center;
-//     background-repeat: no-repeat;
-//     background-size: contain;
-//     background-attachment: scroll;
-//     .content-bottom-aside-wrap {
-//         padding: 60px 15px 0;
-//         .textwidget {
-//             margin-bottom: 60px;
-//         }
-//         h3 {
-//             position: relative;
-//             margin: 0 0 20px 0;
-//             color: rgba(107, 124, 147, 0.75);
-//             text-transform: uppercase;
-//             font-size: 11px;
-//             letter-spacing: 2px;
-//         }
-//         h2 {
-//             font-size: 48px;
-//             font-weight: 300;
-//             line-height: 1.3;
-//             margin-bottom: 35px;
-//             span {
-//                 display: block;
-//                 color: #54c8ef;
-//                 font-size: 48px;
-//             }
-//         }
-//         .button {
-//             width: auto;
-//             padding: 15px 30%;
-//             font-size: 18px;
-//             text-align: center;
-//             background: #54c8ef;
-//             color: #ffffff;
-//             line-height: 26px;
-//             border-radius: 3px;
-//         }
-//         .contactExperts {
-//             display: flex;
-//             align-items: center;
-//             .images {
-//                 margin-right: 15px;
-//                 display: flex;
-//                 align-items: center;
-//                 padding-left: 7px;
-//                 text-align: left;
-//                 position: relative;
-//                 span {
-//                     width: 50px;
-//                     height: 50px;
-//                     overflow: hidden;
-//                     position: relative;
-//                     margin-left: -10px;
-//                     border: 3px solid #fff;
-//                     border-radius: 50%;
-//                 }
-//             }
-//             .content {
-//                 a {
-//                     color: #1252f5;
-//                 }
-//             }
-//         }
-//     }
-// }
-
-// .footer-widgets {
-//     position: relative;
-//     padding: 60px 0 0;
-//     background: linear-gradient(0deg, rgba(255,255,255,0) 0%, rgba(84,200,238,.12) 100%);
-//     .widget {
-//         font-size: 18px;
-//         margin-bottom: 60px;
-//         position: relative;
-//         ul {
-//             margin: 40px 0 0 0;
-//             padding: 0;
-//             li {
-//                 margin-bottom: 15px;
-//                 a {
-//                     color: #3a416f;
-//                     font-size: 24px;
-//                     align-items: center;
-//                     font-weight: 300;
-//                     position: relative;
-//                 }
-//             }
-//         }
-//         h3 {
-//             margin-bottom: 20px;
-//         }
-//         p {
-//             margin-bottom: 20px;
-//         }
-//     }
-//     ul.menu {
-//         padding: 0;
-//         display: flex;
-//         align-items: center;
-//         justify-content: space-between;
-//         li {
-//             a {
-//                 color: #15b7ee;
-//                 font-size: 24px;
-//                 line-height: 150%;
-//                 font-weight: 300;
-//                 padding: 0;
-//             }
-//         }
-//     }
-// }
-// .footer-copyright {
-//     font-size: 14px;
-//     padding-bottom: 60px;
-// }
-// .go-to-top {
-//     display: block;
-//     width: 100%;
-//     margin-bottom: 25px;
-//     text-align: right;
-//     position: relative;
-//     top: -5px;
-//     a {
-//         position: relative;
-//         text-transform: uppercase;
-//         font-size: 10px;
-//         letter-spacing: 2px;
-//         font-weight: 500;
-//         display: inline-block;
-//         color: inherit;
-//         z-index: 4;
-//     }
-// }
-
-// .footer-copyright-inner {
-//     flex-direction: row;
-//     position: relative;
-//     align-items: center;
-//     display: flex;
-//     text-align: inherit;
-//     .copyright-content {
-//         order: 2;
-//         flex-grow: 1;
-//         a {
-//             color: inherit;
-//         }
-//     }
-//     .social-icons {
-//         margin-bottom: 0;
-//         margin-right: 30px;
-//         order: 1;
-//         &:first-child {
-//             margin-left: 0;
-//         }
-//         a {
-//             width: 50px;
-//             height: 50px;
-//             line-height: 48px;
-//             border: 1px solid #c2cfde;
-//             text-align: center;
-//             margin: 0 6px;
-//             color: inherit;
-//             border-radius: 25px;
-//             display: inline-block;
-//             i {
-//                 font-size: 18px;
-//                 line-height: 48px;
-//             }
-//         }
-//     }
-//     img {
-//         display: block;
-//         position: absolute;
-//         right: 23px;
-//         top: 50%;
-//         transform: translateY(-50%);
-//     }
-// }
-
+.tabs-icon-list {
+    @include flex(center,space-between);
+    margin-bottom: 40px;
+    .tab-item {
+        position: relative;
+        max-width: 160px;
+        font-size: 20px;
+        color: inherit;
+        line-height: 1.3;
+        margin: 0;
+        padding: 0 0 30px 0;
+        background: transparent;
+        border: none;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        border-radius: 0;
+        text-align: center;
+        cursor: pointer;
+        .icon {
+            width: 64px;
+            height: 64px;
+            line-height: 62px;
+            border: 1px solid;
+            font-size: 24px;
+            margin-bottom: 15px;
+            border-radius: 50%;
+            @include flex(center,center);
+            i {
+                font-size: 24px;
+                color: #54c8ef;
+            }
+        }
+        &.active {
+            .icon {
+                background-color: #1252f5;
+                i {
+                    color: #fff;
+                }
+            }
+            .text {
+                color: #1252f5;
+            }
+        }
+    }
+}
