--- a/scss/widgets.scss
+++ b/scss/widgets.scss
@@ -1194,7 +1194,7 @@ select {
             text-align: center;
             img {
                 width: 70px;
-                height: auto;
+                height: 70px;
                 border-radius: 50%;
             }
         }
@@ -1301,54 +1301,6 @@ select {
             border-radius: 25px;
             transition: 0.5s cubic-bezier(.25,.8,.25,1) 0s;
         }
-    }
-}
-
-.vc_tta-tab {
-    max-width: 160px;
-    text-align: center;
-    a {
-        font-size: 20px;
-        color: inherit;
-        line-height: 1.3;
-        margin: 0;
-        padding: 0 0 30px 0;
-        background: transparent;
-        border: none;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        border-radius: 0;
-        position: relative;
-        text-decoration: none;
-        transition: all .2s ease-in-out;
-        box-shadow: none;
-        i {
-            width: 64px;
-            height: 64px;
-            line-height: 62px;
-            border: 1px solid;
-            font-size: 24px;
-            margin-bottom: 15px;
-            border-radius: 50%;
-            transition: all 0.2s ease-in-out 0s;
-            color: #54c8ef;
-            &::before {
-                color: #54c8ef;
-                display: inline;
-            }
-        }
-    }
-    &::after {
-        content: "\ea04";
-        font-family: "Nucleo";
-        font-size: 12px;
-        position: absolute;
-        left: 50%;
-        transform: translateX(-50%) translateY(-10px);
-        bottom: 0;
-        opacity: 0;
-        color: #1252f5;
     }
 }
 
@@ -2238,3 +2190,43 @@ ul.iconlist-tree {
     }
 }
 
+.video-wrap {
+    a {
+        display: flex;
+        justify-content: center;
+        .icon {
+            width: 24px;
+            height: 24px;
+            @include flex(center,center);
+            position: relative;
+            &::before {
+                font-size: 24px;
+                content: "\ea04";
+                font-family: "Nucleo";
+                position: absolute;
+                left: calc(50% + 2px);
+                top: 50%;
+                text-indent: 0;
+                z-index: 3;
+                color: #fff;
+                transform: translate(-50%, -50%) rotate(-90deg);
+            }
+            &::after {
+                font-size: 24px;
+                width: 100px;
+                height: 100px;
+                content: "";
+                position: absolute;
+                background: linear-gradient(180deg, #ffffff 0%, rgba(255, 255, 255, 0) 100%);
+                left: 50%;
+                top: 50%;
+                transform: translate(-50%, -50%);
+                z-index: 2;
+                opacity: .75;
+                border-radius: 50%;
+                box-shadow: 0 2px 3px 0 rgba(58,65,111,.3), 0 6px 10px -2px rgba(58,65,111,.2), inset 0 -2px 0 0 rgba(58,65,111,.5), inset 0 1px 0 0 rgba(255,255,255,.3);
+                background-color: #1252f5;
+            }
+        }
+    }
+}
